fix rank number width to prevent layout shift on rank 4

--- a/src/ui/pages/TalentsPage/components/Controls/components/RankSlider/RankSlider.module.css
+++ b/src/ui/pages/TalentsPage/components/Controls/components/RankSlider/RankSlider.module.css
@@ -15,6 +15,11 @@
     max-width: 130px;
 }
 
+.output {
+    /* fixes the layout shift on rank 4 */
+    width: 9px; 
+}
+
 @media (max-width: 400px) {
     .rankSliderRoot input {
         max-width: 80px;
